@@ -54,6 +54,7 @@ import java.util.Set;
  * characters or which is undefined over a range of characters.
  *
  * @author Aaron M. Renn (arenn@urbanophile.com)
+ * @since 1.2
  */
 public interface AttributedCharacterIterator extends CharacterIterator
 {
@@ -192,7 +193,7 @@ public interface AttributedCharacterIterator extends CharacterIterator
    *
    * @return A list of keys 
    */
-  Set getAllAttributeKeys();
+  Set<Attribute> getAllAttributeKeys();
 
   /**
    * Returns a <code>Map</code> of the attributes defined for the current 
@@ -200,7 +201,7 @@ public interface AttributedCharacterIterator extends CharacterIterator
    *
    * @return A <code>Map</code> of the attributes for the current character.
    */
-  Map getAttributes();
+  Map<Attribute, Object> getAttributes();
 
   /**
    * Returns the value of the specified attribute for the
@@ -230,7 +231,7 @@ public interface AttributedCharacterIterator extends CharacterIterator
    *
    * @return The start index of the run.
    */
-  int getRunStart (Set attribs);
+  int getRunStart (Set<? extends Attribute> attribs);
   
   /**
    * Returns the index of the first character in the run that
@@ -259,7 +260,7 @@ public interface AttributedCharacterIterator extends CharacterIterator
    *
    * @return The end index of the run.
    */
-  int getRunLimit (Set attribs);
+  int getRunLimit (Set<? extends Attribute> attribs);
   
   /**
    * Returns the index of the character after the end of the run
